test/syc/bad/shortchar.c
/*
 * Both short and char specifier
 */

short char a;
